--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ requests==2.32.3
 requests-oauthlib==2.0.0
 rubicon-objc==0.4.9
 scikit-surprise==1.1.4
-selenium==4.25.0
+selenium
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.1
