--- a/requirements.txt
+++ b/requirements.txt
@@ -26,33 +26,17 @@ future==0.18.3
 gunicorn==20.1.0
 inflection==0.5.1
 jsonpointer==2.1
-line-bot-sdk==3.13.0
-MouseInfo==0.1.3
 mysqlclient==2.1.1
 oauthlib==3.2.2
 outcome==1.3.0.post0
-pep8==1.7.1
 Pillow==10.0.0
-ply==3.11
 protobuf==3.20.3
 psycopg2==2.9.5
 pyasn1-modules==0.2.8
-PyDispatcher==2.0.5
-PyGetWindow==0.0.9
-pyls-spyder==0.4.0
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-PyQt5==5.15.10
-PyQtWebEngine==5.15.6
-PyRect==0.2.0
-PyScreeze==1.0.1
 python-decouple==3.8
 python-slugify==8.0.4
 python3-openid==3.2.0
-pytweening==1.2.0
-requests==2.32.3
-requests-oauthlib==2.0.0
-rubicon-objc==0.4.9
+requests
 scikit-surprise==1.1.4
 selenium
 social-auth-app-django==5.4.2
@@ -67,5 +51,4 @@ whitenoise==6.7.0
 wsproto==1.2.0
 setuptools>=70.0.0
 scikit-learn==1.4.2
-apscheduler
 beautifulsoup4
